# memory

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  PUBLISH_CHECKLIST.md  QUICKSTART.md  RATE_LIMITS.md  README.md  article_style.md  cv.md  cv.md.example  package-lock.json  package.json  pipeline.sh  pitches.md  profile.md  pyproject.toml  requirements.txt  stitch-prompt.md  taste.md  verify_setup.py  work.md  writing_style.md
.claude/commands/: article.md  cover-letter.md  humanize.md  interview-prep.md  outreach.md  pdf.md  pitch.md  post.md  profile.md  publish.md  sync.md  taste.md  write.md
.github/workflows/: deploy.yml  profile-scrape.yml  scrape.yml
charts/: README.md  package-lock.json  package.json  render.mjs  theme.js
charts/examples/: access-vs-maturity.json  adoption-gap.json  adoption-over-time.json  article-card-experience-tax.json  day-in-life.json  evolution-timeline.json  pipeline-flow.json  quadrant-ai-maturity.json  quote-card-identity-weight.json  quote-classic-jobs.json  three-organs.json
config/: config.yaml  site.yaml  site.yaml.example
content/: cv.md  now.md  now.md.example  pitches.md
cv/: generate.py
docs/: CONTRIBUTING.md
posts/: INDEX.md
scraper/: __init__.py  auth.py  browser_crawler.py  export_parser.py  linkedin_client.py  main.py  markdown_generator.py  media_downloader.py  models.py  post_fetcher.py  utils.py
scripts/: pipeline.sh  scrape_profile.py
style/: article_style.md  pitch_style.md  profile.md  writing_style.md
web/: build.py  deploy.sh  resolve_links.py
(+1607 files in other folders)
